Arumando comits